extends Node2D

@onready var HEAVEN_HEAL = $HEAL
@onready var HEAVEN_MAGIA_USE = $MAGIAUSE
@onready var HEAVEN_MAGIA_REGEN = $MAGIAREGEN
@onready var HEAVEN_PARRY = $PARRY
@onready var HEAVEN_BLOCK = $BLOCK
@onready var HEAVEN_SLASH = $SLASH
@onready var HEAVEN_SHOOT = $SHOOT
@onready var HEAVEN_BUBBLE = $BUBBLE
@onready var HEAVEN_BUBBLE_POP = $BUBBLEPOP
@onready var HEAVEN_BUFF = $BUFF
@onready var HEAVEN_DEBUFF = $DEBUFF
@onready var SILLY_HEAVEN_BUFF = $ClownSounds/SILLYBUFF
@onready var HEAVEN_CRIT_1 = $CRIT_1
@onready var HEAVEN_CRIT_2 = $CRIT_2
@onready var HEAVEN_CRIT_3 = $CRIT_3
